# Splayer

./: README.md  build.gradle  local.properties
app/src/main/cpp/: Android.mk  CMakeLists.txt  audio_device_opensles.cpp  player.cpp  player.h  player_helper.cpp  player_jni_entry.cpp  player_soft.cpp  video_render_android.cpp  video_render_defines.h  video_render_opengles20.cpp
app/src/main/cpp/extra/: player_file.cpp
app/src/main/cpp/ffmpeg/libavcodec/: aacpsdsp.c  allcodecs.c  cabac_functions.h  dcadsp.c  dct-test.c  dsputil.c  dxva2_internal.h  fft.h  flacdsp.c  h264_cabac.c  h264chroma.c  indeo3data.h  internal.h  libgsm.c  libxvid_rc.c  mathops.h  mlpdsp.c  motion-test.c  mpegaudiodsp.c  msmpeg4.h  pthread.c  put_bits.h  rdft.h  rectangle.h  sbrdsp.c  sinewin.h  thread.h  tiff.c  tiffenc.c  utils.c  vdpau_internal.h  vorbisdsp.c
app/src/main/cpp/ffmpeg/libavdevice/: alldevices.c  alsa-audio.h  avdevice.c  dv1394.c  jack_audio.c  libcdio.c  libdc1394.c  oss_audio.c  timefilter.c  v4l.c  v4l2-common.h  x11grab.c
app/src/main/cpp/ffmpeg/libavfilter/: allfilters.c  avfiltergraph.c  deshake.h  opencl_allkernels.h  pthread.c  trim.c  unsharp.h  vf_drawtext.c  vf_frei0r.c  vf_hqdn3d.c  vf_subtitles.c
app/src/main/cpp/ffmpeg/libavformat/: id3v2.c  mxfenc.c  network.h  os_support.c  os_support.h  rtmpdh.c  rtmpdh.h  sctp.c  smoothstreamingenc.c  swf.h  url.c
app/src/main/cpp/ffmpeg/libavresample/: audio_convert.c
app/src/main/cpp/ffmpeg/libavutil/: adler32.c  atomic.h  avstring.c  cpu.c  crc.c  file.c  file_open.c  float_dsp.c  float_dsp.h  internal.h  intmath.h  libm.h  log.c  mem.c  opencl.h  random_seed.c  time.c  timer.h  utils.c
app/src/main/cpp/ffmpeg/libpostproc/: postprocess.c
app/src/main/cpp/ffmpeg/libswresample/: swresample_internal.h
app/src/main/cpp/ffmpeg/libswscale/: input.c  output.c  rgb2rgb.c  swscale.c  swscale_internal.h  swscale_unscaled.c  utils.c  yuv2rgb.c
app/src/main/cpp/ffmpeg/tools/: cws2fws.c  (+8 more)
app/src/main/cpp/hard/: player_hard.cpp
app/src/main/cpp/soft/: ijksdl_egl.c  ijksdl_egl.h  ijksdl_gles2.h  ijksdl_gles2_common.c  ijksdl_gles2_internal.h  ijksdl_gles2_renderer.c  ijksdl_gles2_shader.c  ijksdl_log.h  ljmediaplayer.cpp  ljmediaplayer.h  ljplayer_jni.cpp  ljplayer_jni.h  ljplayer_msg_queue.h  ljsdl_audio.cpp  ljsdl_audio.h  ljsdl_mutex.cpp  ljsdl_mutex.h  ljsdl_opensles.cpp  ljsdl_opensles.h  ljsdl_thread.cpp  ljsdl_thread.h  ljsdl_video.cpp  ljsdl_video.h
(+142 files in other folders)
